[gd_scene load_steps=16 format=2]

[ext_resource path="res://Karte_Dijkstra2.png" type="Texture" id=1]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Knoten_selected.png" type="Texture" id=3]
[ext_resource path="res://Knoten_disabled.png" type="Texture" id=4]
[ext_resource path="res://Knoten.png" type="Texture" id=5]
[ext_resource path="res://weg.png" type="Texture" id=6]
[ext_resource path="res://weg_disabled.png" type="Texture" id=7]
[ext_resource path="res://weg_selected.png" type="Texture" id=8]
[ext_resource path="res://pirate-ship-2028572_1280.png" type="Texture" id=9]
[ext_resource path="res://Dijkstra.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 10 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 985.75, 522.5 )
scale = Vector2( 1.00177, 1.00438 )
texture = ExtResource( 1 )

[node name="AB" type="TextureButton" parent="."]
margin_left = 347.0
margin_top = 352.0
margin_right = 1037.0
margin_bottom = 379.0
rect_rotation = 105.0
rect_scale = Vector2( 0.7, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="BC" type="TextureButton" parent="."]
margin_left = 346.0
margin_top = 336.0
margin_right = 1036.0
margin_bottom = 363.0
rect_rotation = -16.0
rect_scale = Vector2( 0.7, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="BD" type="TextureButton" parent="."]
margin_left = 358.0
margin_top = 355.0
margin_right = 1048.0
margin_bottom = 382.0
rect_rotation = 26.0
rect_scale = Vector2( 0.6, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="CG" type="TextureButton" parent="."]
margin_left = 821.0
margin_top = 207.0
margin_right = 1511.0
margin_bottom = 234.0
rect_scale = Vector2( 0.6, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="AD" type="TextureButton" parent="."]
margin_left = 228.0
margin_top = 802.0
margin_right = 918.0
margin_bottom = 829.0
rect_rotation = -27.0
rect_scale = Vector2( 0.8, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="CF" type="TextureButton" parent="."]
margin_left = 823.0
margin_top = 218.0
margin_right = 1513.0
margin_bottom = 245.0
rect_rotation = 40.5
rect_scale = Vector2( 0.8, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="EF" type="TextureButton" parent="."]
margin_left = 1238.0
margin_top = 586.0
margin_right = 1928.0
margin_bottom = 613.0
rect_rotation = 135.0
rect_scale = Vector2( 0.7, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="CD" type="TextureButton" parent="."]
margin_left = 824.0
margin_top = 208.0
margin_right = 1514.0
margin_bottom = 235.0
rect_rotation = 102.0
rect_scale = Vector2( 0.5, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="AE" type="TextureButton" parent="."]
margin_left = 207.0
margin_top = 814.0
margin_right = 897.0
margin_bottom = 841.0
rect_rotation = 8.0
rect_scale = Vector2( 1, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="FI" type="TextureButton" parent="."]
margin_left = 1242.0
margin_top = 569.0
margin_right = 1932.0
margin_bottom = 596.0
rect_rotation = 25.0
rect_scale = Vector2( 0.7, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="GH" type="TextureButton" parent="."]
margin_left = 1245.0
margin_top = 212.0
margin_right = 1935.0
margin_bottom = 239.0
rect_rotation = 18.0
rect_scale = Vector2( 0.7, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="HI" type="TextureButton" parent="."]
margin_left = 1726.0
margin_top = 374.0
margin_right = 2416.0
margin_bottom = 401.0
rect_rotation = 95.0
rect_scale = Vector2( 0.6, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="GF" type="TextureButton" parent="."]
margin_left = 1243.0
margin_top = 204.0
margin_right = 1933.0
margin_bottom = 231.0
rect_rotation = 90.0
rect_scale = Vector2( 0.55, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="NodeA" type="TextureButton" parent="."]
margin_left = 173.0
margin_top = 783.0
margin_right = 287.0
margin_bottom = 897.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelA" type="Label" parent="NodeA"]
margin_left = 4.99997
margin_top = 9.33325
margin_right = 65.0
margin_bottom = 100.333
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1

[node name="LabelA2" type="Label" parent="NodeA"]
margin_left = 113.333
margin_top = 99.3333
margin_right = 173.333
margin_bottom = 190.333
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1

[node name="NodeB" type="TextureButton" parent="."]
margin_left = 304.0
margin_top = 319.0
margin_right = 418.0
margin_bottom = 433.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelB" type="Label" parent="NodeB"]
margin_left = 47.0
margin_top = 10.6667
margin_right = 107.0
margin_bottom = 101.667
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "B"
align = 1

[node name="LabelB2" type="Label" parent="NodeB"]
margin_left = 54.9999
margin_top = 101.0
margin_right = 115.0
margin_bottom = 192.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "B"
align = 1

[node name="NodeC" type="TextureButton" parent="."]
margin_left = 778.0
margin_top = 183.0
margin_right = 892.0
margin_bottom = 297.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelC" type="Label" parent="NodeC"]
margin_left = 50.3334
margin_top = 7.33328
margin_right = 110.333
margin_bottom = 98.3333
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "C"
align = 1

[node name="LabelC2" type="Label" parent="NodeC"]
margin_left = 63.3335
margin_top = 97.6666
margin_right = 123.333
margin_bottom = 188.667
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "C"
align = 1

[node name="NodeD" type="TextureButton" parent="."]
margin_left = 703.0
margin_top = 512.0
margin_right = 817.0
margin_bottom = 626.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelD" type="Label" parent="NodeD"]
margin_left = 53.3334
margin_top = 13.3334
margin_right = 114.333
margin_bottom = 104.333
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "D"
align = 1

[node name="LabelD2" type="Label" parent="NodeD"]
margin_left = 61.0
margin_top = 102.667
margin_right = 122.0
margin_bottom = 193.667
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "D"
align = 1

[node name="NodeE" type="TextureButton" parent="."]
margin_left = 856.0
margin_top = 886.0
margin_right = 970.0
margin_bottom = 1000.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelE" type="Label" parent="NodeE"]
margin_left = 52.0001
margin_top = 12.3335
margin_right = 112.0
margin_bottom = 103.333
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "E"
align = 1

[node name="LabelE2" type="Label" parent="NodeE"]
margin_left = 63.3335
margin_top = 102.667
margin_right = 123.333
margin_bottom = 193.667
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "E"
align = 1

[node name="NodeF" type="TextureButton" parent="."]
margin_left = 1202.0
margin_top = 544.0
margin_right = 1316.0
margin_bottom = 658.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelF" type="Label" parent="NodeF"]
margin_left = 51.9998
margin_top = 9.00018
margin_right = 112.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "F"
align = 1

[node name="LabelF2" type="Label" parent="NodeF"]
margin_left = 63.333
margin_top = 99.3334
margin_right = 123.333
margin_bottom = 190.333
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "F"
align = 1

[node name="NodeG" type="TextureButton" parent="."]
margin_left = 1196.0
margin_top = 178.0
margin_right = 1310.0
margin_bottom = 292.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelG" type="Label" parent="NodeG"]
margin_left = 51.0
margin_top = 11.0
margin_right = 112.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "G"
align = 1

[node name="LabelG2" type="Label" parent="NodeG"]
margin_left = 59.3333
margin_top = 101.0
margin_right = 120.333
margin_bottom = 192.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "G"
align = 1

[node name="NodeH" type="TextureButton" parent="."]
margin_left = 1682.0
margin_top = 342.0
margin_right = 1796.0
margin_bottom = 456.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelH" type="Label" parent="NodeH"]
margin_left = 28.3333
margin_top = 13.3334
margin_right = 89.3333
margin_bottom = 104.333
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "H"
align = 1

[node name="NodeI" type="TextureButton" parent="."]
margin_left = 1645.0
margin_top = 738.0
margin_right = 1759.0
margin_bottom = 852.0
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="LabelI" type="Label" parent="NodeI"]
margin_left = 27.0
margin_top = 8.0
margin_right = 87.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "I"
align = 1

[node name="A" type="Position2D" parent="."]
position = Vector2( 208, 816 )

[node name="B" type="Position2D" parent="."]
position = Vector2( 339, 352 )

[node name="C" type="Position2D" parent="."]
position = Vector2( 812, 217 )

[node name="D" type="Position2D" parent="."]
position = Vector2( 737, 546 )

[node name="E" type="Position2D" parent="."]
position = Vector2( 888, 921 )

[node name="F" type="Position2D" parent="."]
position = Vector2( 1237, 579 )

[node name="G" type="Position2D" parent="."]
position = Vector2( 1230, 212 )

[node name="H" type="Position2D" parent="."]
position = Vector2( 1718, 376 )

[node name="I" type="Position2D" parent="."]
position = Vector2( 1679, 773 )

[node name="Ship" type="KinematicBody2D" parent="."]
position = Vector2( 208, 816 )
scale = Vector2( 1.66667, 1.66667 )

[node name="Image" type="Sprite" parent="Ship"]
position = Vector2( -4.79993, -7.7998 )
scale = Vector2( 0.0623814, 0.0623814 )
texture = ExtResource( 9 )

[node name="LabelAB" type="Label" parent="."]
margin_left = 246.0
margin_top = 553.0
margin_right = 281.0
margin_bottom = 596.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "5|"

[node name="LabelAB2" type="Label" parent="."]
margin_left = 306.0
margin_top = 596.0
margin_right = 331.0
margin_bottom = 639.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "5|"

[node name="LabelBC" type="Label" parent="."]
margin_left = 539.0
margin_top = 256.0
margin_right = 574.0
margin_bottom = 299.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "3|"

[node name="LabelBC2" type="Label" parent="."]
margin_left = 599.0
margin_top = 299.0
margin_right = 624.0
margin_bottom = 342.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "3|"

[node name="LabelCD" type="Label" parent="."]
margin_left = 749.0
margin_top = 354.0
margin_right = 784.0
margin_bottom = 397.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "8|"

[node name="LabelCD2" type="Label" parent="."]
margin_left = 809.0
margin_top = 397.0
margin_right = 844.0
margin_bottom = 440.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "8|"

[node name="LabelAD" type="Label" parent="."]
margin_left = 449.0
margin_top = 662.0
margin_right = 484.0
margin_bottom = 705.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "2|"

[node name="LabelAD2" type="Label" parent="."]
margin_left = 509.0
margin_top = 705.0
margin_right = 534.0
margin_bottom = 748.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "2"

[node name="LabelBD" type="Label" parent="."]
margin_left = 512.0
margin_top = 433.0
margin_right = 547.0
margin_bottom = 476.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "1|"

[node name="LabelBD2" type="Label" parent="."]
margin_left = 572.0
margin_top = 476.0
margin_right = 597.0
margin_bottom = 519.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "1|"

[node name="LabelFI" type="Label" parent="."]
margin_left = 1411.0
margin_top = 651.0
margin_right = 1446.0
margin_bottom = 694.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "5|"

[node name="LabelFI2" type="Label" parent="."]
margin_left = 1471.0
margin_top = 694.0
margin_right = 1506.0
margin_bottom = 737.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "5|"

[node name="LabelHI" type="Label" parent="."]
margin_left = 1670.0
margin_top = 545.0
margin_right = 1705.0
margin_bottom = 588.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "3|"

[node name="LabelHI2" type="Label" parent="."]
margin_left = 1730.0
margin_top = 588.0
margin_right = 1765.0
margin_bottom = 631.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "3|"

[node name="LabelCG" type="Label" parent="."]
margin_left = 998.0
margin_top = 193.0
margin_right = 1033.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "6|"

[node name="LabelCG2" type="Label" parent="."]
margin_left = 1058.0
margin_top = 236.0
margin_right = 1093.0
margin_bottom = 279.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "6|"

[node name="LabelGF" type="Label" parent="."]
margin_left = 1204.0
margin_top = 367.0
margin_right = 1239.0
margin_bottom = 410.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "8|"

[node name="LabelGF2" type="Label" parent="."]
margin_left = 1264.0
margin_top = 410.0
margin_right = 1299.0
margin_bottom = 453.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "8|"

[node name="LabelGH" type="Label" parent="."]
margin_left = 1453.0
margin_top = 273.0
margin_right = 1488.0
margin_bottom = 316.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "7|"

[node name="LabelGH2" type="Label" parent="."]
margin_left = 1513.0
margin_top = 316.0
margin_right = 1548.0
margin_bottom = 359.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "7|"

[node name="LabelCF" type="Label" parent="."]
margin_left = 997.0
margin_top = 388.0
margin_right = 1032.0
margin_bottom = 431.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "4|"

[node name="LabelCF2" type="Label" parent="."]
margin_left = 1057.0
margin_top = 431.0
margin_right = 1092.0
margin_bottom = 474.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "4|"

[node name="LabelEF" type="Label" parent="."]
margin_left = 1042.0
margin_top = 717.0
margin_right = 1077.0
margin_bottom = 760.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "7|"

[node name="LabelEF2" type="Label" parent="."]
margin_left = 1102.0
margin_top = 760.0
margin_right = 1137.0
margin_bottom = 803.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "7|"

[node name="LabelAE" type="Label" parent="."]
margin_left = 519.0
margin_top = 849.0
margin_right = 554.0
margin_bottom = 892.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "4|"

[node name="LabelAE2" type="Label" parent="."]
margin_left = 579.0
margin_top = 892.0
margin_right = 614.0
margin_bottom = 935.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "4|"

[node name="confirmButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 913.0
margin_right = 459.0
margin_bottom = 972.0
custom_fonts/font = SubResource( 3 )

[node name="Label" type="Label" parent="confirmButton"]
margin_left = 15.0
margin_top = 5.0
margin_right = 213.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 217, 39 )
custom_fonts/font = SubResource( 4 )
text = "Bestätigen |"

[node name="Label2" type="Label" parent="confirmButton"]
margin_left = 61.0
margin_top = 37.0001
margin_right = 259.0
margin_bottom = 76.0001
rect_rotation = 180.0
rect_pivot_offset = Vector2( 171, 6.99994 )
custom_fonts/font = SubResource( 4 )
text = "Bestätigen |"

[node name="deleteButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 989.0
margin_right = 631.0
margin_bottom = 1051.0
custom_fonts/font = SubResource( 3 )

[node name="Label" type="Label" parent="deleteButton"]
margin_left = 10.0
margin_top = 9.0
margin_right = 301.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 217, 39 )
custom_fonts/font = SubResource( 5 )
text = "Eingabe löschen |"

[node name="Label2" type="Label" parent="deleteButton"]
margin_left = 242.0
margin_top = 40.0
margin_right = 533.0
margin_bottom = 79.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 171, 6.99994 )
custom_fonts/font = SubResource( 5 )
text = "Eingabe löschen |"

[connection signal="pressed" from="AB" to="." method="_on_AB_pressed"]
[connection signal="pressed" from="BC" to="." method="_on_BC_pressed"]
[connection signal="pressed" from="BD" to="." method="_on_BD_pressed"]
[connection signal="pressed" from="CG" to="." method="_on_CG_pressed"]
[connection signal="pressed" from="AD" to="." method="_on_AD_pressed"]
[connection signal="pressed" from="CF" to="." method="_on_CF_pressed"]
[connection signal="pressed" from="EF" to="." method="_on_EF_pressed"]
[connection signal="pressed" from="CD" to="." method="_on_CD_pressed"]
[connection signal="pressed" from="AE" to="." method="_on_AE_pressed"]
[connection signal="pressed" from="FI" to="." method="_on_FI_pressed"]
[connection signal="pressed" from="GH" to="." method="_on_GH_pressed"]
[connection signal="pressed" from="HI" to="." method="_on_HI_pressed"]
[connection signal="pressed" from="GF" to="." method="_on_GF_pressed"]
[connection signal="pressed" from="confirmButton" to="." method="_on_confirmButton_pressed"]
[connection signal="pressed" from="deleteButton" to="." method="_on_deleteButton_pressed"]
